@@ -1,3 +1,5 @@
+* autodetection of ide devices would be nice, rather than always loading
+  the ide modules
 
 * perhaps probe to see if the module can actually be loaded before bugging the
   user for any more information?
