@@ -8,7 +8,7 @@ Standards-Version: 3.6.1.0
 
 Package: hw-detect
 Architecture: all
-Depends: discover-udeb, discover-data-udeb
+Depends: discover-udeb, discover-data-udeb, rootskel (>= 0.54)
 Description: Detect hardware and load kernel drivers for it
  Using discover to find the HW.
 
@@ -34,4 +34,3 @@ Package: archdetect
 Architecture: any
 Description: Hardware architect detector
  This module detects the different hardware architectures.
-
