@@ -4,6 +4,17 @@ ddetect (0.58) UNRELEASED; urgency=low
     - Remove the bogus "false" from the end of the modprobe error message
       display.
     - Sort the list of modules for manual selection.
+    - Use register-module to register modules for ide and scsi CDROMS,
+      so they will be available for base-config.
+    - Use register-module to register any module parameters that are entered
+      by the user.
+    - Fix ethdetect to not write kernel module parameters to
+      /target/etc/modules; instead use register-module here too.
+    - Add a versioned dep on rootskel.
+    - Based on user reports, users are very confused to see the missing
+      modules dialog for stuff like ide-floppy, which is both unavailable
+      and not autodetected. So leave off non-autodetectable modules from the
+      missing modules message.
   * Claus Hindsgaul
     - Update da (Danish) translation.
   * Konstantinos Margaritis
